--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
             <button onclick="jogoNumeroSecreto()">Advinhe o número secreto</button>
             <button onclick="jogoCalculoMedia()">Calcule a média</button>
-            <button onclick="mostrarJogo()">Jogo de Somar Número</button>
+            <button onclick="mostrarJogo()">Somar Número</button>
                 <div id="inputContainer">
                     <input type="number" id="numero1" placeholder="Digite o 1º número">
                     <br>
